# toyunda-player

./: .gitignore  CMakeLists.txt  Makefile  compil-option.cmake  doxygen.cmake  testing.cmake
include/: mpv_wrapper.hpp  sdl_wrapper.hpp
src/: displayer.hpp  main.cpp  mpv_wrapper.cpp  pointers.cpp  pointers.hpp  sdl_wrapper.cpp  subtitleparser.hpp  subtitles.hpp
